--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -505,21 +505,17 @@ border-color: transparent;</string>
  </string>
        </property>
       </widget>
-      <widget class="QTextEdit" name="textEdit">
+      <widget class="QLabel" name="label">
        <property name="geometry">
         <rect>
-         <x>640</x>
-         <y>350</y>
-         <width>221</width>
-         <height>181</height>
+         <x>740</x>
+         <y>510</y>
+         <width>101</width>
+         <height>20</height>
         </rect>
        </property>
-       <property name="html">
-        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'century gothic'; font-size:16px; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:16px;&quot;&gt;MATRICULE&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       <property name="text">
+        <string>MATRICULE</string>
        </property>
       </widget>
      </widget>
