--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1056</width>
-    <height>671</height>
+    <width>1235</width>
+    <height>664</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -91,8 +91,8 @@ QComboBox::down-arrow:on {
      <rect>
       <x>20</x>
       <y>10</y>
-      <width>1031</width>
-      <height>591</height>
+      <width>1161</width>
+      <height>641</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -106,8 +106,8 @@ QComboBox::down-arrow:on {
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>1071</width>
-       <height>591</height>
+       <width>1171</width>
+       <height>581</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -360,7 +360,7 @@ border-color: transparent;</string>
       <widget class="QLabel" name="label_7">
        <property name="geometry">
         <rect>
-         <x>570</x>
+         <x>710</x>
          <y>10</y>
          <width>131</width>
          <height>41</height>
@@ -376,8 +376,8 @@ border-color: transparent;</string>
       <widget class="QPushButton" name="pb_supprimer">
        <property name="geometry">
         <rect>
-         <x>850</x>
-         <y>530</y>
+         <x>1010</x>
+         <y>520</y>
          <width>131</width>
          <height>31</height>
         </rect>
@@ -394,7 +394,7 @@ border-color: transparent;</string>
         <rect>
          <x>380</x>
          <y>60</y>
-         <width>601</width>
+         <width>761</width>
          <height>441</height>
         </rect>
        </property>
@@ -405,8 +405,8 @@ border-color: transparent;</string>
       <widget class="QPushButton" name="pb_modifier">
        <property name="geometry">
         <rect>
-         <x>550</x>
-         <y>530</y>
+         <x>560</x>
+         <y>520</y>
          <width>151</width>
          <height>31</height>
         </rect>
@@ -431,19 +431,6 @@ border-color: transparent;</string>
         <string>Facture</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton_2">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>550</y>
-         <width>186</width>
-         <height>28</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Stat</string>
-       </property>
-      </widget>
       <widget class="QPushButton" name="pushButton">
        <property name="geometry">
         <rect>
@@ -461,7 +448,7 @@ border-color: transparent;</string>
        <property name="geometry">
         <rect>
          <x>400</x>
-         <y>530</y>
+         <y>520</y>
          <width>131</width>
          <height>31</height>
         </rect>
@@ -490,8 +477,8 @@ border-color: transparent;</string>
       <widget class="QLineEdit" name="le_modifier">
        <property name="geometry">
         <rect>
-         <x>720</x>
-         <y>530</y>
+         <x>870</x>
+         <y>520</y>
          <width>121</width>
          <height>31</height>
         </rect>
@@ -508,14 +495,91 @@ border-color: transparent;</string>
       <widget class="QLabel" name="label">
        <property name="geometry">
         <rect>
-         <x>740</x>
-         <y>510</y>
+         <x>880</x>
+         <y>560</y>
          <width>101</width>
          <height>20</height>
         </rect>
        </property>
        <property name="text">
         <string>MATRICULE</string>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="CB_trie">
+       <property name="geometry">
+        <rect>
+         <x>380</x>
+         <y>20</y>
+         <width>121</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <item>
+        <property name="text">
+         <string>matricule</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>ID</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Date</string>
+        </property>
+       </item>
+      </widget>
+      <widget class="QLineEdit" name="le_recherche">
+       <property name="geometry">
+        <rect>
+         <x>960</x>
+         <y>20</y>
+         <width>141</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">     border: 2px solid gray;
+     border-radius: 10px;
+     padding: 0 8px;
+     background:rgb(255, 255, 255);
+     selection-background-color: darkgray;</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="icon_label">
+       <property name="geometry">
+        <rect>
+         <x>1100</x>
+         <y>10</y>
+         <width>41</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="autoFillBackground">
+        <bool>false</bool>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(115, 183, 255);</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="pixmap">
+        <pixmap resource="logos.qrc">:/recherche.png</pixmap>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButton_2">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>550</y>
+         <width>186</width>
+         <height>28</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Stat</string>
        </property>
       </widget>
      </widget>
@@ -527,7 +591,7 @@ border-color: transparent;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1056</width>
+     <width>1235</width>
      <height>26</height>
     </rect>
    </property>
@@ -543,6 +607,8 @@ border-color: transparent;</string>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="logos.qrc"/>
+ </resources>
  <connections/>
 </ui>
