--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -19,12 +19,12 @@
      <rect>
       <x>30</x>
       <y>40</y>
-      <width>631</width>
-      <height>421</height>
+      <width>681</width>
+      <height>481</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="tab_4">
      <attribute name="title">
@@ -85,7 +85,7 @@
      <widget class="QLabel" name="label_5">
       <property name="geometry">
        <rect>
-        <x>220</x>
+        <x>230</x>
         <y>60</y>
         <width>56</width>
         <height>16</height>
@@ -129,6 +129,9 @@
         <width>113</width>
         <height>22</height>
        </rect>
+      </property>
+      <property name="text">
+       <string/>
       </property>
      </widget>
      <widget class="QLineEdit" name="lenum">
@@ -391,12 +394,112 @@
      <widget class="QTableView" name="tableView">
       <property name="geometry">
        <rect>
-        <x>80</x>
-        <y>50</y>
-        <width>471</width>
-        <height>301</height>
+        <x>10</x>
+        <y>20</y>
+        <width>321</width>
+        <height>331</height>
        </rect>
       </property>
+     </widget>
+     <widget class="QPushButton" name="carte">
+      <property name="geometry">
+       <rect>
+        <x>510</x>
+        <y>400</y>
+        <width>161</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Generer une carte fidélité </string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pdf">
+      <property name="geometry">
+       <rect>
+        <x>350</x>
+        <y>400</y>
+        <width>161</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Generer PDF</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_2">
+      <property name="geometry">
+       <rect>
+        <x>180</x>
+        <y>400</y>
+        <width>171</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Afficher un client spécefique</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="recherche">
+      <property name="geometry">
+       <rect>
+        <x>380</x>
+        <y>360</y>
+        <width>141</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Recherche</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="trier">
+      <property name="geometry">
+       <rect>
+        <x>42</x>
+        <y>400</y>
+        <width>141</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>trier la liste</string>
+      </property>
+     </widget>
+     <widget class="QTableView" name="tableview2">
+      <property name="geometry">
+       <rect>
+        <x>345</x>
+        <y>21</y>
+        <width>311</width>
+        <height>331</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="line_recherche">
+      <property name="geometry">
+       <rect>
+        <x>532</x>
+        <y>370</y>
+        <width>121</width>
+        <height>31</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBox">
+      <property name="geometry">
+       <rect>
+        <x>300</x>
+        <y>370</y>
+        <width>73</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <item>
+       <property name="text">
+        <string>cin</string>
+       </property>
+      </item>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_2">
