--- a/dialog_email.ui
+++ b/dialog_email.ui
@@ -75,7 +75,7 @@
     <string>text</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
