--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>1078</width>
+    <height>604</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,14 +17,14 @@
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>40</y>
-      <width>681</width>
-      <height>481</height>
+      <x>20</x>
+      <y>10</y>
+      <width>1031</width>
+      <height>511</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab_4">
      <attribute name="title">
@@ -33,8 +33,8 @@
      <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>60</y>
+        <x>20</x>
+        <y>20</y>
         <width>56</width>
         <height>16</height>
        </rect>
@@ -46,8 +46,8 @@
      <widget class="QLabel" name="label_2">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>130</y>
+        <x>20</x>
+        <y>60</y>
         <width>56</width>
         <height>16</height>
        </rect>
@@ -59,8 +59,8 @@
      <widget class="QLabel" name="label_3">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>190</y>
+        <x>20</x>
+        <y>100</y>
         <width>56</width>
         <height>16</height>
        </rect>
@@ -72,8 +72,8 @@
      <widget class="QLabel" name="label_4">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>260</y>
+        <x>0</x>
+        <y>140</y>
         <width>56</width>
         <height>16</height>
        </rect>
@@ -85,8 +85,8 @@
      <widget class="QLabel" name="label_5">
       <property name="geometry">
        <rect>
-        <x>230</x>
-        <y>60</y>
+        <x>170</x>
+        <y>20</y>
         <width>56</width>
         <height>16</height>
        </rect>
@@ -98,8 +98,8 @@
      <widget class="QLabel" name="label_6">
       <property name="geometry">
        <rect>
-        <x>240</x>
-        <y>130</y>
+        <x>180</x>
+        <y>60</y>
         <width>56</width>
         <height>16</height>
        </rect>
@@ -111,8 +111,8 @@
      <widget class="QLabel" name="label_7">
       <property name="geometry">
        <rect>
-        <x>220</x>
-        <y>200</y>
+        <x>170</x>
+        <y>100</y>
         <width>56</width>
         <height>16</height>
        </rect>
@@ -124,8 +124,8 @@
      <widget class="QLineEdit" name="lecin">
       <property name="geometry">
        <rect>
-        <x>110</x>
-        <y>60</y>
+        <x>50</x>
+        <y>20</y>
         <width>113</width>
         <height>22</height>
        </rect>
@@ -137,8 +137,8 @@
      <widget class="QLineEdit" name="lenum">
       <property name="geometry">
        <rect>
-        <x>110</x>
-        <y>130</y>
+        <x>50</x>
+        <y>60</y>
         <width>113</width>
         <height>22</height>
        </rect>
@@ -147,8 +147,8 @@
      <widget class="QLineEdit" name="lenom">
       <property name="geometry">
        <rect>
-        <x>100</x>
-        <y>190</y>
+        <x>50</x>
+        <y>100</y>
         <width>113</width>
         <height>22</height>
        </rect>
@@ -157,8 +157,8 @@
      <widget class="QLineEdit" name="leprenom">
       <property name="geometry">
        <rect>
-        <x>110</x>
-        <y>260</y>
+        <x>50</x>
+        <y>140</y>
         <width>113</width>
         <height>22</height>
        </rect>
@@ -167,8 +167,8 @@
      <widget class="QLineEdit" name="lead">
       <property name="geometry">
        <rect>
-        <x>280</x>
-        <y>60</y>
+        <x>220</x>
+        <y>20</y>
         <width>113</width>
         <height>22</height>
        </rect>
@@ -177,8 +177,8 @@
      <widget class="QLineEdit" name="lemail">
       <property name="geometry">
        <rect>
-        <x>280</x>
-        <y>130</y>
+        <x>220</x>
+        <y>60</y>
         <width>113</width>
         <height>22</height>
        </rect>
@@ -187,8 +187,8 @@
      <widget class="QLineEdit" name="lemat">
       <property name="geometry">
        <rect>
-        <x>280</x>
-        <y>200</y>
+        <x>230</x>
+        <y>100</y>
         <width>113</width>
         <height>22</height>
        </rect>
@@ -197,8 +197,8 @@
      <widget class="QPushButton" name="ajouter">
       <property name="geometry">
        <rect>
-        <x>470</x>
-        <y>310</y>
+        <x>370</x>
+        <y>370</y>
         <width>93</width>
         <height>28</height>
        </rect>
@@ -207,177 +207,11 @@
        <string>ajouter</string>
       </property>
      </widget>
-    </widget>
-    <widget class="QWidget" name="tab_3">
-     <attribute name="title">
-      <string>modifier un client</string>
-     </attribute>
-     <widget class="QLabel" name="label_8">
-      <property name="geometry">
-       <rect>
-        <x>60</x>
-        <y>50</y>
-        <width>56</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>cin</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_9">
-      <property name="geometry">
-       <rect>
-        <x>60</x>
-        <y>130</y>
-        <width>56</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>num</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_10">
-      <property name="geometry">
-       <rect>
-        <x>60</x>
-        <y>210</y>
-        <width>56</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>nom</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_11">
-      <property name="geometry">
-       <rect>
-        <x>60</x>
-        <y>280</y>
-        <width>56</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>prenom</string>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="lecin1">
-      <property name="geometry">
-       <rect>
-        <x>130</x>
-        <y>50</y>
-        <width>113</width>
-        <height>22</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="lenum1">
-      <property name="geometry">
-       <rect>
-        <x>130</x>
-        <y>130</y>
-        <width>113</width>
-        <height>22</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="lenom1">
-      <property name="geometry">
-       <rect>
-        <x>130</x>
-        <y>210</y>
-        <width>113</width>
-        <height>22</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="leprenom1">
-      <property name="geometry">
-       <rect>
-        <x>130</x>
-        <y>270</y>
-        <width>113</width>
-        <height>22</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_12">
-      <property name="geometry">
-       <rect>
-        <x>280</x>
-        <y>50</y>
-        <width>56</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>adresse</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_13">
-      <property name="geometry">
-       <rect>
-        <x>270</x>
-        <y>140</y>
-        <width>56</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>mail</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_14">
-      <property name="geometry">
-       <rect>
-        <x>270</x>
-        <y>210</y>
-        <width>56</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>matricule</string>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="lead1">
-      <property name="geometry">
-       <rect>
-        <x>360</x>
-        <y>50</y>
-        <width>113</width>
-        <height>22</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="lemail1">
-      <property name="geometry">
-       <rect>
-        <x>350</x>
-        <y>130</y>
-        <width>113</width>
-        <height>22</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="lemat1">
-      <property name="geometry">
-       <rect>
-        <x>350</x>
-        <y>210</y>
-        <width>113</width>
-        <height>22</height>
-       </rect>
-      </property>
-     </widget>
      <widget class="QPushButton" name="modifier">
       <property name="geometry">
        <rect>
-        <x>460</x>
-        <y>320</y>
+        <x>480</x>
+        <y>370</y>
         <width>93</width>
         <height>28</height>
        </rect>
@@ -386,132 +220,35 @@
        <string>modifier</string>
       </property>
      </widget>
-    </widget>
-    <widget class="QWidget" name="tab">
-     <attribute name="title">
-      <string>afficher la liste</string>
-     </attribute>
-     <widget class="QTableView" name="tableView">
+     <widget class="QPushButton" name="pushButton">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>20</y>
-        <width>321</width>
-        <height>331</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="carte">
-      <property name="geometry">
-       <rect>
-        <x>510</x>
-        <y>400</y>
-        <width>161</width>
-        <height>41</height>
+        <x>370</x>
+        <y>410</y>
+        <width>93</width>
+        <height>28</height>
        </rect>
       </property>
       <property name="text">
-       <string>Generer une carte fidélité </string>
+       <string>supprimer</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pdf">
+     <widget class="QLineEdit" name="lecin2">
       <property name="geometry">
        <rect>
-        <x>350</x>
-        <y>400</y>
-        <width>161</width>
-        <height>41</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Generer PDF</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="pushButton_2">
-      <property name="geometry">
-       <rect>
-        <x>180</x>
-        <y>400</y>
-        <width>171</width>
-        <height>41</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Afficher un client spécefique</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="recherche">
-      <property name="geometry">
-       <rect>
-        <x>380</x>
-        <y>360</y>
-        <width>141</width>
-        <height>41</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Recherche</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="trier">
-      <property name="geometry">
-       <rect>
-        <x>42</x>
-        <y>400</y>
-        <width>141</width>
-        <height>41</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>trier la liste</string>
-      </property>
-     </widget>
-     <widget class="QTableView" name="tableview2">
-      <property name="geometry">
-       <rect>
-        <x>345</x>
-        <y>21</y>
-        <width>311</width>
-        <height>331</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="line_recherche">
-      <property name="geometry">
-       <rect>
-        <x>532</x>
-        <y>370</y>
-        <width>121</width>
-        <height>31</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QComboBox" name="comboBox">
-      <property name="geometry">
-       <rect>
-        <x>300</x>
-        <y>370</y>
-        <width>73</width>
+        <x>630</x>
+        <y>380</y>
+        <width>113</width>
         <height>22</height>
        </rect>
       </property>
-      <item>
-       <property name="text">
-        <string>cin</string>
-       </property>
-      </item>
      </widget>
-    </widget>
-    <widget class="QWidget" name="tab_2">
-     <attribute name="title">
-      <string>supprimer un client</string>
-     </attribute>
      <widget class="QLabel" name="label_15">
       <property name="geometry">
        <rect>
-        <x>90</x>
-        <y>160</y>
-        <width>56</width>
+        <x>590</x>
+        <y>380</y>
+        <width>41</width>
         <height>16</height>
        </rect>
       </property>
@@ -519,27 +256,202 @@
        <string>cin</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="lecin2">
+     <widget class="QTableView" name="tableView">
       <property name="geometry">
        <rect>
-        <x>180</x>
-        <y>160</y>
-        <width>113</width>
-        <height>22</height>
+        <x>360</x>
+        <y>20</y>
+        <width>661</width>
+        <height>171</height>
        </rect>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="trier">
       <property name="geometry">
        <rect>
-        <x>420</x>
-        <y>310</y>
+        <x>370</x>
+        <y>450</y>
+        <width>101</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>trier la liste</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pdf">
+      <property name="geometry">
+       <rect>
+        <x>480</x>
+        <y>450</y>
+        <width>81</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Generer PDF</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="search">
+      <property name="geometry">
+       <rect>
+        <x>480</x>
+        <y>410</y>
         <width>93</width>
         <height>28</height>
        </rect>
       </property>
       <property name="text">
-       <string>supprimer</string>
+       <string>Rechercher</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_2">
+      <property name="geometry">
+       <rect>
+        <x>580</x>
+        <y>410</y>
+        <width>141</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Generer carte fidélité</string>
+      </property>
+     </widget>
+     <widget class="QTableView" name="tableView_2">
+      <property name="geometry">
+       <rect>
+        <x>360</x>
+        <y>200</y>
+        <width>661</width>
+        <height>141</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_3">
+      <property name="geometry">
+       <rect>
+        <x>580</x>
+        <y>450</y>
+        <width>261</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Afficher listes voitures relatives aux clients</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab">
+     <attribute name="title">
+      <string>Carte fidélité </string>
+     </attribute>
+     <widget class="QPushButton" name="ajoutcarte">
+      <property name="geometry">
+       <rect>
+        <x>180</x>
+        <y>290</y>
+        <width>121</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Ajouter</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="supprimercarte">
+      <property name="geometry">
+       <rect>
+        <x>310</x>
+        <y>290</y>
+        <width>101</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Supprimer</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="modifiercarte">
+      <property name="geometry">
+       <rect>
+        <x>420</x>
+        <y>290</y>
+        <width>101</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Modifier</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="affichercarte">
+      <property name="geometry">
+       <rect>
+        <x>530</x>
+        <y>290</y>
+        <width>93</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Afficher</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="cin3">
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>61</y>
+        <width>111</width>
+        <height>31</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_8">
+      <property name="geometry">
+       <rect>
+        <x>80</x>
+        <y>65</y>
+        <width>71</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>CIN</string>
+      </property>
+     </widget>
+     <widget class="QTableView" name="tableView_3">
+      <property name="geometry">
+       <rect>
+        <x>315</x>
+        <y>0</y>
+        <width>551</width>
+        <height>261</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="point">
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>120</y>
+        <width>113</width>
+        <height>31</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_9">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>130</y>
+        <width>81</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>POINT</string>
       </property>
      </widget>
     </widget>
@@ -550,7 +462,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>1078</width>
      <height>26</height>
     </rect>
    </property>
